test/pending/pos/misc/B.scala
package test

class B {
	
	def myA = new A()

}
