test/pending/neg/dot-classpath/S_2.scala
class A {
  def f = new foo.Bippy
}